--- a/default-ssl.conf
+++ b/default-ssl.conf
@@ -39,7 +39,7 @@
 		#   the referenced file can be the same as SSLCertificateFile
 		#   when the CA certificates are directly appended to the server
 		#   certificate for convinience.
-		#SSLCertificateChainFile /etc/apache2/ssl.crt/server-ca.crt
+		SSLCertificateChainFile /etc/apache2/ssl.crt/ca1.cert-chain.pem
 
 		#   Certificate Authority (CA):
 		#   Set the CA certificate verification path where to find CA
